# zh-tw-tai271828.github.io-src

./: .gitmodules  LICENSE.txt  README.md  pelicanconf.py  pyproject.toml  requirements.txt
content/: career-01-salary-market.md  community-organizers-01-commercial-resource.rst  community-volunteer-01-motivation.rst  community-volunteer-02-coral.rst  community-volunteer-02-medium.rst  draft-00-template-reading-reflection-summary.rst  draft-00-template.md  draft-00-template.rst  draft-template.rst  draft-time-management-01-schedule-emails.rst  draft_community-data-strategy-01-ticket-social-media.rst  draft_community-organizers-01-commercial-resource.rst  draft_community-organizers-02-recruitment.rst  draft_community-organizers-03-execution.rst  draft_community-organizers-04-host-meetings.rst  draft_community-organizers-05-mailing-list.rst  draft_community-volunteer-01-motivation-01-internal.rst  draft_community-volunteer-02-medium.rst  first-post.rst  misc-chichat-01-energy-management-social-media.md  misc-integration.rst  misc-knowledge-picking-up-01-knowledge-map-of-science.md  misc-solve-problems.rst  open-source-skills-research-and-tech-01-watch-out-legacy-doc.rst  open-source-skills-research-and-tech-02-follow-issue-pr-templates.rst  open-source-skills-research-and-tech-03-tldp-introduction.rst  open-source-skills-research-and-tech-04-project-mentors.rst  open-source-skills-research-and-tech-05-google-keywords.rst  programming-code-01-12-factor-cli.md  programming-code-smell-and-literature.rst  python-abc-and-practice.rst  python-matplotlib.md  (+12 more)
